# anote-cli

./: .meetingnote_config  Cargo.toml  LICENSE  README.md
src/: config.rs  create.rs  list.rs  main.rs  spinner.rs  summarize.rs  utils.rs
