[package]
name = "anote"
version = "0.1.0"
edition = "2021"
author = ["Gabe Shin <gabeshin.ts@gmail.com>"]
license = "MIT"
description = "CLI Note taking tool that utilize Ollama library to summarize the note"
homepage = "https://github.com/gabeshin/anote-cli"
repository = "https://github.com/gabeshin/anote-cli"
keywords = ["cli", "note", "note taking"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
dialoguer = "0.11.0"
chrono = "0.4.31"
clap = { version = "4.4.10", features = ["derive"] }
